--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <section id="mainCampaign">
                 <div class="wrap">
                     <div class="mainPanel">
-                        <a href="#"><img src="images/middle.jpg" alt="新定价" class="pc"></a>
+                        <a href="#"><img src="middle.jpg" alt="新定价" class="pc"></a>
                     </div>
                     <ul class="fourPanels">
-                        <li><a href="#"><img src="images/list-1.jpg" alt="自然、当然、无印。"><span class="title">自然、当然、无印。</span></a></li>
-                        <li><a href="#"><img src="images/list-2.jpg" alt="MUJI HOTEL北京坊预定上线"><span class="title">MUJI HOTEL北京坊预定上线</span></a></li>
-                        <li><a href="#"><img src="images/list-3.jpg" alt="柔和洗面洁面"><span class="title">柔和洗面洁面</span></a></li>
-                        <li><a href="#"><img src="images/list-4.jpg" alt="SALE"></a></li>
+                        <li><a href="#"><img src="list-1.jpg" alt="自然、当然、无印。"><span class="title">自然、当然、无印。</span></a></li>
+                        <li><a href="#"><img src="list-2.jpg" alt="MUJI HOTEL北京坊预定上线"><span class="title">MUJI HOTEL北京坊预定上线</span></a></li>
+                        <li><a href="#"><img src="list-3.jpg" alt="柔和洗面洁面"><span class="title">柔和洗面洁面</span></a></li>
+                        <li><a href="#"><img src="list-4.jpg" alt="SALE"></a></li>
                     </ul>
                 </div>
                 <div class="more"><a href="#">更多</a></div>
@@ -50,24 +50,24 @@
                 <div class="more"><a href="#">网络商城</a></div>
                 <div class="wrap">
                     <ul>
-                        <li style="background-image: url(images/p1-1.jpg)"><a href="#"><span>男装</span></a></li>
-                        <li style="background-image: url(images/p1-2.jpg)"><a href="#"><span>女装</span></a></li>
-                        <li style="background-image: url(images/p1-3.jpg)"><a href="#"><span>童装</span></a></li>
-                        <li style="background-image: url(images/p1-4.jpg)"><a href="#"><span>鞋包</span></a></li>
-                        <li style="background-image: url(images/p1-5.jpg)"><a href="#"><span>服装杂货</span></a></li>
-                        <li style="background-image: url(images/p1-6.jpg)"><a href="#"><span>内衣</span></a></li>
+                        <li style="background-image: url(p1-1.jpg)"><a href="#"><span>男装</span></a></li>
+                        <li style="background-image: url(p1-2.jpg)"><a href="#"><span>女装</span></a></li>
+                        <li style="background-image: url(p1-3.jpg)"><a href="#"><span>童装</span></a></li>
+                        <li style="background-image: url(p1-4.jpg)"><a href="#"><span>鞋包</span></a></li>
+                        <li style="background-image: url(p1-5.jpg)"><a href="#"><span>服装杂货</span></a></li>
+                        <li style="background-image: url(p1-6.jpg)"><a href="#"><span>内衣</span></a></li>
                     </ul>
                     <ul>
-                        <li style="background-image: url(images/p2-1.jpg)"><a href="#"><span>织品</span></a></li>
-                        <li style="background-image: url(images/p2-2.jpg)"><a href="#"><span>家具</span></a></li>
-                        <li style="background-image: url(images/p2-3.jpg)"><a href="#"><span>电子产品</span></a></li>
-                        <li style="background-image: url(images/p2-4.jpg)"><a href="#"><span>居家用品</span></a></li>
-                        <li style="background-image: url(images/p2-5.jpg)"><a href="#"><span>文具</span></a></li>
-                        <li style="background-image: url(images/p2-6.jpg)"><a href="#"><span>卫生 & 美容用品</span></a></li>
-                        <li style="background-image: url(images/p2-7.jpg)"><a href="#"><span>户外用品</span></a></li>
+                        <li style="background-image: url(p2-1.jpg)"><a href="#"><span>织品</span></a></li>
+                        <li style="background-image: url(p2-2.jpg)"><a href="#"><span>家具</span></a></li>
+                        <li style="background-image: url(p2-3.jpg)"><a href="#"><span>电子产品</span></a></li>
+                        <li style="background-image: url(p2-4.jpg)"><a href="#"><span>居家用品</span></a></li>
+                        <li style="background-image: url(p2-5.jpg)"><a href="#"><span>文具</span></a></li>
+                        <li style="background-image: url(p2-6.jpg)"><a href="#"><span>卫生 & 美容用品</span></a></li>
+                        <li style="background-image: url(p2-7.jpg)"><a href="#"><span>户外用品</span></a></li>
                     </ul>
                     <ul>
-                        <li style="background-image: url(images/p3-1.jpg)"><a href="#"><span>食品</span></a></li>
+                        <li style="background-image: url(p3-1.jpg)"><a href="#"><span>食品</span></a></li>
                     </ul>
                 </div>
             </section>
@@ -77,9 +77,9 @@
                 <div class="more"><a href="/cn/net/feature/shop/">更多</a></div>
                 <div class="wrap">
                     <ul>
-                        <li><a href="#"><img src="images/ser-1.png" alt="MUJI PASSPORT"><span class="title"></span></a></li>
-                        <li><a href="#"><img src="images/ser-2.jpg" alt="Interior Advisor"><span class="title">家具搭配咨询服务</span></a></li>
-                        <li><a href="#"><img src="images/ser-3.jpg" alt="Styling Advisor"><span class="title">服装搭配咨询服务</span></a></li>
+                        <li><a href="#"><img src="ser-1.png" alt="MUJI PASSPORT"><span class="title"></span></a></li>
+                        <li><a href="#"><img src="ser-2.jpg" alt="Interior Advisor"><span class="title">家具搭配咨询服务</span></a></li>
+                        <li><a href="#"><img src="ser-3.jpg" alt="Styling Advisor"><span class="title">服装搭配咨询服务</span></a></li>
                     </ul>
                 </div>
             </section>
@@ -88,10 +88,10 @@
         <aside id="misc">
             <div class="content">
                 <ul class="sns">
-                    <li class="weibo"><a href="#" target="_black"><img src="images/weibo.png" alt="weibo"></a></li>
-                    <li class="wechat"><a href="#" target="_black"><img src="images/wechat.png" alt="wechat"></a></li>
+                    <li class="weibo"><a href="#" target="_black"><img src="weibo.png" alt="weibo"></a></li>
+                    <li class="wechat"><a href="#" target="_black"><img src="wechat.png" alt="wechat"></a></li>
                 </ul>
-                <div class="passport"><a href="#"><img src="images/passport.png" alt="MUJI passport"></a></div>
+                <div class="passport"><a href="#"><img src="passport.png" alt="MUJI passport"></a></div>
             </div>
         </aside>
 
