--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header id="globalHeader">
             <div class="headerWrap">
-                <h1 id="siteName"><a href="#"><img src="images/logo2.png" alt="橙旭园"></a></h1>
+                <h1 id="siteName"><a href="#"><img src="logo2.png" alt="橙旭园"></a></h1>
                 <nav id="hGlobalNav">
                     <div class="wrapper">
                         <ul>
